<resources>
    <string name="app_name">TrainR</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_map_fragment">Map</string>
    <string name="welcome">Welcome to TrainR!</string>
    <string name="enter_weight">Weight</string>
    <string name="enter_height">Height</string>
    <string name="enter_age">Enter your age</string>
    <string name="enter_gender">Enter your Gender</string>
    <string name="save_string">SAVE</string>
    <string name="save_activity">Do you want to save this activity?</string>
    <string name="discard_activity">Do you want to discard this activity?</string>
    <string name="discard">DISCARD</string>
    <string name="cancel">CANCEL</string>
    <string name="elevation_key">AIzaSyAEzpANRDqkS9s6NXF3gaoOcW114ahHh8M</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="clear_all_data">Clear Data</string>
    <string name="remove_location_updates">Stop</string>
    <string name="launch_activity">Launch TrainR</string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="ok">OK</string>
    <string name="settings">Settings</string>
    <string name="running">Running</string>
    <string name="cycling">Cycling</string>
    <string name="walking">Walking</string>
    <string name="pace_min_km">Pace(min/km)</string>
    <string name="distance_m">Distance(m)</string>
    <string name="distance_km">Distance(km)</string>
</resources>
