<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/map_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapFragment">

    <RelativeLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_dodgeInsetEdges="bottom">

        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            tools:context=".MainActivity">
        </FrameLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/start_button"
            style="@style/Widget.Design.FloatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="33dp"
            android:layout_marginBottom="74dp"
            android:scaleType="center"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:tooltipText="Start Activity"
            app:fabCustomSize="50dp"
            app:srcCompat="@drawable/ic_play_arrow_black_24dp" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/activity_type"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="2.5dp"
            android:backgroundTint="@color/colorPrimary"
            android:gravity="center"
            app:iconGravity="textStart"
            android:text="Activity"
            android:elevation="5dp"
            android:textColor="@color/colorPrimaryLight"
            app:cornerRadius="15dp"
            app:icon="@drawable/ic_priority_high_black_24dp"
            app:iconTint="@color/colorPrimaryLight" />

        <View
            android:id="@+id/rectangle"
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp"
            android:layout_marginBottom="0dp"
            android:alpha="0.8"
            android:background="@color/colorPrimaryLight"
            android:visibility="gone" />

        <Chronometer
            android:id="@+id/timeChronometer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="135dp"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="46sp"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="0dp"
            android:layout_marginBottom="94dp">

            <TextView
                android:id="@+id/distanceText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:ellipsize="end"
                android:maxLines="1"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline1"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="36sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/speedText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_weight="0"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="0.0"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline1"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="36sp"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="0dp"
            android:layout_marginBottom="68dp">

            <TextView
                android:id="@+id/distanceM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="3dp"
                android:text="@string/distance_m"
                android:textSize="24sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/distanceKm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="3dp"
                android:text="@string/distance_km"
                android:textSize="24sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/speedWord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:paddingRight="3dp"
                android:text="@string/pace_min_km"
                android:textSize="24sp"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="5dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/pause_button"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimaryDark"
                android:gravity="center"
                app:iconGravity="textStart"
                android:layout_marginStart="5dp"
                android:text="PAUSE"
                android:textColor="@android:color/white"
                android:textSize="18dp"
                android:visibility="gone"
                app:cornerRadius="25dp"
                app:icon="@drawable/ic_pause_black_24dp"
                android:elevation="5dp"
                app:iconTint="@color/colorAccent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/resume_button"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimaryDark"
                android:gravity="center"
                app:iconGravity="textStart"
                android:layout_marginStart="5dp"
                android:text="RESUME"
                android:textSize="18dp"
                android:layout_weight="1"
                android:textColor="@android:color/white"
                app:cornerRadius="25dp"
                app:icon="@drawable/ic_play_arrow_black_24dp"
                app:iconTint="@color/colorAccent"
                android:elevation="5dp"
                android:visibility="gone"/>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/stop_button"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimaryDark"
                android:gravity="center"
                app:iconGravity="textStart"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:text="STOP"
                android:textSize="18dp"
                android:layout_weight="1"
                android:textColor="@android:color/white"
                app:cornerRadius="25dp"
                app:icon="@drawable/ic_stop_black_24dp"
                app:iconTint="@color/colorAccent"
                android:elevation="5dp"
                android:visibility="gone"/>

        </LinearLayout>
    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
